<resources>
    <string name="app_name">Apparently Project Management</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_projects">Projects</string>

    <string name="no_projects_for_user">There aren\'t any projects for you. Would you like to create one?</string>

    <string name="authentication_url">http://userservice.staging.tangentmicroservices.com:80/api-token-auth/</string>
    <string name="projects_url">http://projectservice.staging.tangentmicroservices.com:80/api/v1/projects/</string>
    <string name="user_url">http://userservice.staging.tangentmicroservices.com:80/api/v1/users/me/</string>

    <string name="project_list_end_date_lable">End Date:</string>

    <string name="project_create_project_name">Project Name</string>
    <string name="project_create_detailed_description">Detailed Description</string>
    <string name="project_create_start_date_lable">Start Date:</string>
    <string name="project_create_end_date_lable">End Date:</string>
    <string name="project_create_billable_button_label">Billable</string>
    <string name="project_create_active_button_label">Active</string>

    <string name="project_create_project_created">Your project has been created</string>
    <string name="project_create_project_create_error">Unfortunately due to network error\'s we were unable to create your project. Please try again later, or contact Sales Support.</string>

    <string name="menu_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="date_format">dd-MM-yy</string>

    <string name="error_dialog_title">Well this is embarrising:</string>
    <string name="user_data_retireve_error">You have successfully logged in however we were unable to retrieve your user information. This might mean the service is down. Please try again later or contact your Sales Support Operative</string>
    <string name="error_dialog_ok_button">OK</string>


</resources>
